If KDE3 development files not found, then automatically set -DQTC_QT_ONLY=true

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,14 @@ if(COMMAND cmake_policy)
 endif(COMMAND cmake_policy)
 
 if (NOT QTC_QT_ONLY)
-    find_package(KDE3 REQUIRED)
+    find_package(KDE3)
+    if (NOT KDE3_FOUND)
+        set(QTC_QT_ONLY true)
+        message("INFO: KDE3 not found! Compiling for Qt only! (Not building the config module)")
+    endif (NOT KDE3_FOUND)
+endif (NOT QTC_QT_ONLY)
+
+if (NOT QTC_QT_ONLY)
     include(KDE3Macros)
 else (NOT QTC_QT_ONLY)
     set(QT_MT_REQUIRED TRUE)
