--- a/style/CMakeLists.txt
+++ b/style/CMakeLists.txt
@@ -4,7 +4,7 @@ if (NOT QTC_QT_ONLY)
     include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR} ${KDE3_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/common)
     link_directories(${KDE3_LIB_DIR})
     kde3_automoc(${qtcurve_SRCS})
-    add_library(qtcurve SHARED ${qtcurve_SRCS})
+    add_library(qtcurve MODULE ${qtcurve_SRCS})
     set_target_properties(qtcurve PROPERTIES PREFIX "")
     target_link_libraries(qtcurve ${QT_LIBRARIES} kdefx)
     install(TARGETS qtcurve LIBRARY DESTINATION ${KDE3_LIB_DIR}/kde3/plugins/styles)
@@ -14,7 +14,7 @@ else (NOT QTC_QT_ONLY)
     QTCURVE_QT_WRAP_CPP(qtcurve_MOC_SRCS ${qtcurve_MOC_CLASSES})
     set(qtcurve_SRCS qtcurve.cpp qtc_kstyle.cpp pixmaps.h)
     include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR} ${QT_INCLUDE_DIR}  ${CMAKE_SOURCE_DIR}/common)
-    add_library(qtcurve SHARED ${qtcurve_SRCS} ${qtcurve_MOC_SRCS})
+    add_library(qtcurve MODULE ${qtcurve_SRCS} ${qtcurve_MOC_SRCS})
     set_target_properties(qtcurve PROPERTIES PREFIX "")
     target_link_libraries(qtcurve ${QT_LIBRARIES})
     install(TARGETS qtcurve LIBRARY DESTINATION ${QT_PLUGINS_DIR}/styles)
