Config module is deprecated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,17 @@ if(COMMAND cmake_policy)
     cmake_policy(SET CMP0003 NEW)
 endif(COMMAND cmake_policy)
 
-if (NOT QTC_QT_ONLY)
-    find_package(KDE3)
-    if (NOT KDE3_FOUND)
-        set(QTC_QT_ONLY true)
-        message("INFO: KDE3 not found! Compiling for Qt only! (Not building the config module)")
-    endif (NOT KDE3_FOUND)
-endif (NOT QTC_QT_ONLY)
+if (QTC_BUILD_CONFIG_MODULE)
+    if (NOT QTC_QT_ONLY)
+        find_package(KDE3)
+        if (NOT KDE3_FOUND)
+            set(QTC_QT_ONLY true)
+            message("INFO: KDE3 not found! Compiling for Qt only! (Not building the config module)")
+        endif (NOT KDE3_FOUND)
+    endif (NOT QTC_QT_ONLY)
+else (QTC_BUILD_CONFIG_MODULE)
+    set(QTC_QT_ONLY true)
+endif (QTC_BUILD_CONFIG_MODULE)
 
 if (NOT QTC_QT_ONLY)
     include(KDE3Macros)
