Hide shortcut underlines

--- a/style/CMakeLists.txt
+++ b/style/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (NOT QTC_QT_ONLY)
-    set(qtcurve_SRCS qtcurve.cpp pixmaps.h)
+    set(qtcurve_SRCS qtcurve.cpp shortcuthandler.cpp pixmaps.h)
     add_definitions(-DQT_PLUGIN)
     include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR} ${KDE3_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/common)
     link_directories(${KDE3_LIB_DIR})
@@ -10,9 +10,9 @@ if (NOT QTC_QT_ONLY)
     install(TARGETS qtcurve LIBRARY DESTINATION ${KDE3_LIB_DIR}/kde3/plugins/styles)
     install(FILES qtcurve.themerc DESTINATION ${KDE3PREFIX}/share/apps/kstyle/themes)
 else (NOT QTC_QT_ONLY)
-    set(qtcurve_MOC_CLASSES qtcurve.h qtc_kstyle.h)
+    set(qtcurve_MOC_CLASSES qtcurve.h shortcuthandler.h qtc_kstyle.h)
     QTCURVE_QT_WRAP_CPP(qtcurve_MOC_SRCS ${qtcurve_MOC_CLASSES})
-    set(qtcurve_SRCS qtcurve.cpp qtc_kstyle.cpp pixmaps.h)
+    set(qtcurve_SRCS qtcurve.cpp shortcuthandler.cpp qtc_kstyle.cpp pixmaps.h)
     include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR} ${QT_INCLUDE_DIR}  ${CMAKE_SOURCE_DIR}/common)
     add_library(qtcurve MODULE ${qtcurve_SRCS} ${qtcurve_MOC_SRCS})
     set_target_properties(qtcurve PROPERTIES PREFIX "")
